client/src/components/profile/components/portfolio-projects.css
.portfolio-card {
  display: flex;
  margin-top: 2rem;
  border: 1px solid var(--gray10);
  flex-direction: row;
  min-width: 700px;
  max-height: 200px;
}

.portfolio-image {
  min-width: 300px;
  min-height: 200px;
  max-width: 300px;
  max-height: 200px;
  object-fit: cover;
}

.portfolio-card-description {
  margin: 1rem;
  width: 100%;
}

.portfolio-button-container {
  display: flex;
  justify-content: end;
}

.portfolio-card-button {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--quaternary-background);
  color: var(--secondary-color);
  text-decoration: none;
  padding: 0.1rem;
  margin: 0.5rem;
  width: 130px;
  border: 3px solid var(--secondary-color);
  word-break: keep-all;
}

#link-icon {
  margin-inline-start: 10px;
}

.portfolio-card-text {
  height: 120px;
  overflow: scroll;
}

/* vertical layout for mobile */

@media (max-width: 768px) {
  .portfolio-card {
    flex-direction: column;
    min-width: 0;
    max-height: none;
  }

  .portfolio-image {
    width: 100%;
    max-width: 100%;
    min-height: 200px;
  }

  .portfolio-card-description {
    width: auto;
    margin: 1rem;
  }

  .portfolio-button-container {
    justify-content: end;
  }

  .portfolio-card-button {
    margin: 0.5rem;
  }

  .portfolio-card-text {
    height: auto;
    overflow: visible;
  }
}

/* Timeline table styles */
.timeline-row {
  height: 60px;
}

.timeline-row > td {
  vertical-align: middle !important;
}

.timeline-cert-link {
  margin-inline-end: 20px;
}

.timeline-cert-link > svg {
  display: inline-block;
  height: 25px;
  width: auto;
  margin-inline-start: 10px;
  position: absolute;
}

